Add BalaWriter tests for includes